서브하는중

--- a/design.html
+++ b/design.html
@@ -29,10 +29,10 @@
             <a href="#">브랜딩 디자인</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./wep.html"><i>웹사이트</i></a>
+                <a href="./design.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="#"><i>상세페이지</i></a>
+                <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
                 <a href="#"><i>네이밍</i></a>
@@ -50,7 +50,7 @@
                 <a href="./analytics.html"><i>ANALYTICS</i></a>
               </li>
               <li>
-                <a href="#"><i>유튜브 쇼핑</i></a>
+                <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
               </li>
             </ul>
           </li>
@@ -92,10 +92,10 @@
               <a href="#">브랜딩 디자인</a>
               <ul class="submenu">
                 <li>
-                  <a href="./wep.html"><i>웹사이트</i></a>
+                  <a href="./design.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>상세페이지</i></a>
+                  <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
                   <a href="#"><i>네이밍</i></a>
@@ -113,7 +113,7 @@
                   <a href="./analytics.html"><i>ANALYTICS</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>유튜브 쇼핑</i></a>
+                  <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
                 </li>
               </ul>
             </li>
@@ -148,7 +148,7 @@
     <div id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>DESIGN</h2>
+          <h2>웹사이트</h2>
           <p>
             쇼핑몰 구축부터 상세페이지 디자인까지 한 번에 해결하는 토탈 서비스와
             브랜드 맞춤형 디자인을 제공합니다. 공장에서 찍어낸 듯한 디자인이
@@ -156,6 +156,52 @@
           </p>
         </div>
         <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
+      </section>
+
+      <section class="about">
+        <div class="inner">
+          <ul class="about-con">
+            <li>
+              <dl class="about-text">
+                <dt>실제 전문가 그룹</dt>
+                <dd>
+                  창공연구소의 강사님들은 실제 오픈마켓, 쇼핑몰 등을
+                  <br />운영하는 전문가들로 이루어져 있습니다. <br />창업 성공을
+                  연결하고 연구하는 곳입니다.
+                </dd>
+              </dl>
+              <figure>
+                <img src="./img/about-1.jpg" alt="#" />
+              </figure>
+            </li>
+            <li>
+              <dl class="about-text">
+                <dt>체계적인 커리큘럼 및 전자 자격증 획득까지</dt>
+                <dd>
+                  사진촬영, 마케팅 리텐션까지 <br />여기저기 다닐 필요없이
+                  체계적으로 시작할 수 있습니다.<br />
+                  교육 이수만으로 전자상거래 수출마스터 2급자격증을 획득합니다.
+                </dd>
+              </dl>
+              <figure>
+                <img src="./img/about-2.jpg" alt="#" />
+              </figure>
+            </li>
+            <li>
+              <dl class="about-text">
+                <dt>신뢰와 믿음으로 시작</dt>
+                <dd>
+                  창공연구소의 모든 강의는 과장 하지 않는 <br />100% REAL 강의
+                  입니다.<br />
+                  교육과 함께 하는 토크콘서트와 MT까지!
+                </dd>
+              </dl>
+              <figure>
+                <img src="./img/about-3.jpg" alt="#" />
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="intro">
