--- a/service.html
+++ b/service.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
     <link rel="stylesheet" href="./css/marketing.css" />
+    <link rel="stylesheet" href="./css/service.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -29,10 +30,10 @@
             <a href="#">브랜딩 디자인</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./wep.html"><i>웹사이트</i></a>
+                <a href="./design.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="#"><i>상세페이지</i></a>
+                <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
                 <a href="#"><i>네이밍</i></a>
@@ -50,7 +51,7 @@
                 <a href="./analytics.html"><i>ANALYTICS</i></a>
               </li>
               <li>
-                <a href="#"><i>유튜브 쇼핑</i></a>
+                <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
               </li>
             </ul>
           </li>
@@ -92,10 +93,10 @@
               <a href="#">브랜딩 디자인</a>
               <ul class="submenu">
                 <li>
-                  <a href="./wep.html"><i>웹사이트</i></a>
+                  <a href="./design.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>상세페이지</i></a>
+                  <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
                   <a href="#"><i>네이밍</i></a>
@@ -113,7 +114,7 @@
                   <a href="./analytics.html"><i>ANALYTICS</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>유튜브 쇼핑</i></a>
+                  <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
                 </li>
               </ul>
             </li>
@@ -195,6 +196,21 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="more">
+        <div class="inner">
+          <div class="more-con">
+            <div class="more-title">
+              <h4>
+                브랜드에 맞는 최대한의 효과를 <br />연구하고 만들어 갑니다
+              </h4>
+            </div>
+            <a href="https://cglab.channel.io/home" class="c-more-btn"
+              >문의하기</a
+            >
+          </div>
         </div>
       </section>
     </div>
