--- a/youtube.html
+++ b/youtube.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
-    <link rel="stylesheet" href="./css/portplio.css" />
+    <link rel="stylesheet" href="./css/marketing.css" />
+    <link rel="stylesheet" href="./css/analytics.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -148,79 +149,45 @@
     <div id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>포트폴리오</h2>
-          <p>창공연구소의 다양한 포토폴리오를 확인 해보세요.</p>
+          <h2>유튜브 쇼핑</h2>
+          <p>
+            최고의 라이브 콘텐츠 토탈 서비스 파트너가 되기 위해 기획, 상품,
+            소싱,콘텐츠제작,방송운영, 마케팅 등 각 영역의 전문가와 브랜드
+            소통하고 시간, 공간에 제약이 없는 올라운드 라이브 스페이스를 제공
+          </p>
         </div>
-        <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
+        <figure><img src="./img/visual-5-1.jpg" alt="#" /></figure>
       </section>
 
-      <section class="event">
+      <section class="intro">
         <div class="inner">
-          <ul class="event-list" data-aos="fade-up" data-aos-delay="300">
-            <li>
-              <figure><img src="./img/event-list-1.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-2.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-3.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-4.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-5.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-6.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-7.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-8.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-9.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>2022. 6. 13 ~ 7. 17</dd>
-              </dl>
-            </li>
+          <h3 class="sec-title">유튜브 쇼핑 콘텐츠 토탈 서비스</h3>
+          <p>오직 유튜브 쇼핑에서만 누릴수 있는 혜택</p>
+
+          <ul class="intor-list intro-marketing">
+            <li><i>SOLUTION</i></li>
+            <li><i>COMMERCE</i></li>
+            <li><i>STREAMING</i></li>
+            <li><i>CONTENT</i></li>
+            <li><i>MARKETING</i></li>
           </ul>
+        </div>
+      </section>
+
+      <section class="information">
+        <div class="inner">
+          <div class="information-con">
+            <div class="information-title">
+              <p>맞춤형 라이브 쇼핑 파트너</p>
+              <h3>ALL-IN-ONE</h3>
+            </div>
+            <ul class="information-list">
+              <li>스튜디오, 쇼호스트, 전문인력이 함께하는 서비스</li>
+              <li>인플루언서와 함께 다양한 라이브 방송</li>
+              <li>고객의 NEED에 따라 제공하는 라이브커머스 패키지</li>
+              <li>유튜브 쇼핑 플랫폼에 최적화된 서비스</li>
+            </ul>
+          </div>
         </div>
       </section>
     </div>
