--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
             <a href="#">브랜딩 디자인</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./wep.html"><i>웹사이트</i></a>
+                <a href="./design.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="#"><i>상세페이지</i></a>
+                <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
                 <a href="#"><i>네이밍</i></a>
@@ -45,7 +45,7 @@
                 <a href="./analytics.html"><i>ANALYTICS</i></a>
               </li>
               <li>
-                <a href="#"><i>유튜브 쇼핑</i></a>
+                <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
               </li>
             </ul>
           </li>
@@ -87,10 +87,10 @@
               <a href="#">브랜딩 디자인</a>
               <ul class="submenu">
                 <li>
-                  <a href="./wep.html"><i>웹사이트</i></a>
+                  <a href="./design.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>상세페이지</i></a>
+                  <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
                   <a href="#"><i>네이밍</i></a>
@@ -108,7 +108,7 @@
                   <a href="./analytics.html"><i>ANALYTICS</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>유튜브 쇼핑</i></a>
+                  <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
                 </li>
               </ul>
             </li>
