--- a/design-2.html
+++ b/design-2.html
@@ -30,10 +30,10 @@
             <a href="#">브랜딩 디자인</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./wep.html"><i>웹사이트</i></a>
+                <a href="./design.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="#"><i>상세페이지</i></a>
+                <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
                 <a href="#"><i>네이밍</i></a>
@@ -96,7 +96,7 @@
                   <a href="./design.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>상세페이지</i></a>
+                  <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
                   <a href="#"><i>네이밍</i></a>
@@ -114,7 +114,7 @@
                   <a href="./analytics.html"><i>ANALYTICS</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>유튜브 쇼핑</i></a>
+                  <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
                 </li>
               </ul>
             </li>
@@ -149,12 +149,8 @@
     <div id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>웹사이트</h2>
-          <p>
-            쇼핑몰 구축부터 상세페이지 디자인까지 한 번에 해결하는 토탈 서비스와
-            브랜드 맞춤형 디자인을 제공합니다. 공장에서 찍어낸 듯한 디자인이
-            아닌, 최적의 비용으로 전문 서비스를 선사합니다.
-          </p>
+          <h2>인쇄</h2>
+          <p>명함, 제품디자인 및 다양한 인쇄물 디자인을 제공 해드립니다.</p>
         </div>
         <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
       </section>
