--- a/service.html
+++ b/service.html
@@ -63,10 +63,10 @@
                 <a href="./education.html"><i>CEO종합반</i></a>
               </li>
               <li>
-                <a href="./education.html"><i>레벨업 클래스</i></a>
+                <a href="./class.html"><i>레벨업 클래스</i></a>
               </li>
               <li>
-                <a href="./education.html"><i>쇼츠</i></a>
+                <a href="./shorts.html"><i>쇼츠</i></a>
               </li>
             </ul>
           </li>
@@ -126,10 +126,10 @@
                   <a href="./education.html"><i>CEO종합반</i></a>
                 </li>
                 <li>
-                  <a href="./education.html"><i>레벨업 클래스</i></a>
+                  <a href="./class.html"><i>레벨업 클래스</i></a>
                 </li>
                 <li>
-                  <a href="./education.html"><i>쇼츠</i></a>
+                  <a href="./shorts.html"><i>쇼츠</i></a>
                 </li>
               </ul>
             </li>
