--- a/shorts.html
+++ b/shorts.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
-    <link rel="stylesheet" href="./css/portplio.css" />
+    <link rel="stylesheet" href="./css/education.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
   </head>
-
   <body>
     <header id="header">
       <!-- 모바일용 메뉴 -->
@@ -145,85 +144,131 @@
       </div>
     </header>
 
-    <div id="main">
+    <main id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>포트폴리오</h2>
-          <p>창공연구소의 다양한 포토폴리오를 확인 해보세요.</p>
+          <h2>쇼츠</h2>
+          <p>
+            ‘유튜브 쇼핑 인큐베이팅’ 교육은 YPP 이커머스 크리에이터를 대상으로
+            유튜브를 활용한 판매 채널 확장을 지원합니다. 교육은 콘텐츠 기획부터
+            촬영, 편집까지 다루며, 효과적인 상품 홍보 방법을 배울 수 있습니다.
+          </p>
         </div>
-        <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
+        <figure><img src="./img/visual-3-1.jpg" alt="#" /></figure>
       </section>
 
-      <section class="event">
+      <section class="keyword">
+        <h3>수업내용</h3>
         <div class="inner">
-          <ul class="event-list" data-aos="fade-up" data-aos-delay="300">
+          <div class="keyword-wrapper">
+            <div class="swiper keyword-swiper">
+              <div class="swiper-wrapper keyword-con">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <figure><img src="./img/keyword-1.svg" alt="#" /></figure>
+                  <dl>
+                    <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
+                    <dd>
+                      2004년부터 현재까지 모든 온라인 쇼핑몰 채널에 대한
+                      솔루션을 제공합니다. 카페24와 스마트스토어에 최적화된
+                      솔루션을 제공합니다. 2014년 우수멘토상, 2015년 서울시
+                      이커머스 컨설턴트, 2016년 이커머스 최고멘토상, 2017년
+                      이커머스 최고멘토상의 경력 등 국내외 인정받은 마케팅
+                      노하우를 이제는 고객님에게 고스란히 전달해 드리겠습니다.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/curriculum-3.svg" alt="#" /></figure>
+                  <dl>
+                    <dt>온라인 마케팅</dt>
+                    <dd>
+                      CJ E&M, 현대백화점 그룹, 경기콘텐츠진흥원,
+                      (사)인천벤처기업협회 등 현재 유수의 기업들에게 이커머스
+                      마케팅 교육을 하고 있으며, 자체 개발한 빅데이터 분석기와
+                      DATA LAB 분석과 함께 디지털 마케팅에 최적화된 기술력을
+                      보유하고 있습니다. 또한 네이버 블로그, FACEBOOK에 최적화된
+                      마케팅 전략을 가지고 있습니다.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/curriculum-8.svg" alt="#" /></figure>
+                  <dl>
+                    <dt>브랜딩, 성공사례</dt>
+                    <dd>
+                      브랜딩화가 어렵다고 합니다. 내 수익을 100배 올려주는
+                      브랜드 매니지먼트 전략을 알려드립니다. 최근의 여러 성공
+                      사례를 고객에게 진심을 언어 수 있는 브랜드까지 소통을 통한
+                      방향성도 알려드립니다. 방향성만 맞다면 실패하지 않을 수
+                      있습니다.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/curriculum-6.svg" alt="#" /></figure>
+                  <dl>
+                    <dt>모바일 최적화 쇼핑몰</dt>
+                    <dd>
+                      모바일 온리 시대! O2O(Online to Offline)와 모바일 솔루션!
+                      동영상 마케팅 등 최적화된 쇼핑몰을 만들어드립니다.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/curriculum-11.svg" alt="#" /></figure>
+                  <dl>
+                    <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
+                    <dd>
+                      마케팅보다 브랜드보다 운영이 중요하다. 실제 노하우를
+                      바탕으로 알려주는 내 쇼핑몰 운영 노하우 전략!
+                    </dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+
+            <div class="keyword-pagination swiper-pagination"></div>
+            <div class="keyword-button-prev swiper-button-prev-1">
+              <i class="hidden">이전</i>
+            </div>
+            <div class="keyword-button-next swiper-button-next-1">
+              <i class="hidden">다음</i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="time">
+        <div class="inner">
+          <h3 class="time-title">따릉이의 이용시간 조건</h3>
+
+          <ul class="time-list">
+            <li>1회 1매씩 <br />구매가 가능합니다.</li>
+            <li>대여시간은 <br />1시간입니다.</li>
+            <li>초과시 5분마다 <br />추가요금 200원 <br />과금됩니다.</li>
             <li>
-              <figure><img src="./img/event-list-1.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-2.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-3.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-4.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-5.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-6.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-7.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-8.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>#카테고리</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-9.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>프로젝트 이름</dt>
-                <dd>2022. 6. 13 ~ 7. 17</dd>
-              </dl>
+              추가 요금은 <br />이용권 결제수단으로<br />
+              자동결제 됩니다.
             </li>
           </ul>
         </div>
       </section>
-    </div>
+
+      <section class="service">
+        <div class="inner">
+          <div class="sev-con">
+            <a href="https://cglab.channel.io/home" class="service-btn"
+              >문의하기</a
+            >
+            <dl>
+              <dt>무엇이든 편하게 문의하세요.</dt>
+              <dd>창공연구소</dd>
+            </dl>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer id="footer">
       <div class="inner">
