--- a/design-2.html
+++ b/design-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
     <link rel="stylesheet" href="./css/design.css" />
-    <link rel="stylesheet" href="./css/wep.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -36,7 +36,7 @@
                 <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
-                <a href="#"><i>네이밍</i></a>
+                <a href="#"><i>SNS</i></a>
               </li>
             </ul>
           </li>
@@ -99,7 +99,7 @@
                   <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>네이밍</i></a>
+                  <a href="#"><i>SNS</i></a>
                 </li>
               </ul>
             </li>
