--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                 <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
-                <a href="#"><i>네이밍</i></a>
+                <a href="#"><i>SNS</i></a>
               </li>
             </ul>
           </li>
@@ -98,7 +98,7 @@
                   <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>네이밍</i></a>
+                  <a href="#"><i>SNS</i></a>
                 </li>
               </ul>
             </li>
@@ -217,7 +217,7 @@
               <figure><img src="./img/event-list-9.jpg" alt="#" /></figure>
               <dl class="event-text">
                 <dt>프로젝트 이름</dt>
-                <dd>2022. 6. 13 ~ 7. 17</dd>
+                <dd>#카테고리</dd>
               </dl>
             </li>
           </ul>
