--- a/shorts.html
+++ b/shorts.html
@@ -34,7 +34,7 @@
                 <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
-                <a href="#"><i>네이밍</i></a>
+                <a href="#"><i>SNS</i></a>
               </li>
             </ul>
           </li>
@@ -97,7 +97,7 @@
                   <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>네이밍</i></a>
+                  <a href="#"><i>SNS</i></a>
                 </li>
               </ul>
             </li>
@@ -241,16 +241,17 @@
 
       <section class="time">
         <div class="inner">
-          <h3 class="time-title">따릉이의 이용시간 조건</h3>
+          <h3 class="time-title">유튜브 쇼핑 인큐베이팅</h3>
 
           <ul class="time-list">
-            <li>1회 1매씩 <br />구매가 가능합니다.</li>
-            <li>대여시간은 <br />1시간입니다.</li>
-            <li>초과시 5분마다 <br />추가요금 200원 <br />과금됩니다.</li>
             <li>
-              추가 요금은 <br />이용권 결제수단으로<br />
-              자동결제 됩니다.
+              YPP기준을 <br />충족할 수 있는 채널을 만들기 위한 교육입니다
             </li>
+            <li>
+              유튜브에 관련된 내용부터 AI콘텐츠, 영상, 촬영,편집까지 제공합니다.
+            </li>
+            <li>총 40시간 시수에 정원은 12명 내외 입니다.</li>
+            <li>콘텐츠 희망자, 이커머스 관련 비지니스 희망자면 가능합니다.</li>
           </ul>
         </div>
       </section>
@@ -258,13 +259,17 @@
       <section class="service">
         <div class="inner">
           <div class="sev-con">
-            <a href="https://cglab.channel.io/home" class="service-btn"
-              >문의하기</a
-            >
             <dl>
               <dt>무엇이든 편하게 문의하세요.</dt>
               <dd>창공연구소</dd>
             </dl>
+
+            <a href="https://cglab.channel.io/home" class="service-btn"
+              >결제창 <br />바로가기</a
+            >
+            <a href="https://cglab.channel.io/home" class="service-btn"
+              >창공 멤버십</a
+            >
           </div>
         </div>
       </section>
