--- a/youtube.html
+++ b/youtube.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/sub-common.css" />
     <link rel="stylesheet" href="./css/marketing.css" />
     <link rel="stylesheet" href="./css/analytics.css" />
+    <link rel="stylesheet" href="./css/youtube.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -36,7 +37,7 @@
                 <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
-                <a href="#"><i>네이밍</i></a>
+                <a href="#"><i>SNS</i></a>
               </li>
             </ul>
           </li>
@@ -99,7 +100,7 @@
                   <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>네이밍</i></a>
+                  <a href="#"><i>SNS</i></a>
                 </li>
               </ul>
             </li>
@@ -190,6 +191,55 @@
           </div>
         </div>
       </section>
+
+      <!-- phone -->
+      <section class="phone">
+        <div class="inner">
+          <div class="phone-all">
+            <!-- Slides -->
+            <div class="swiper phone-con">
+              <div class="swiper-wrapper phone-img">
+                <div class="swiper-slide">
+                  <figure><img src="./img/phon-1.png" alt="#" /></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/phon-2.png" alt="#" /></figure>
+                </div>
+                <div class="swiper-slide">
+                  <figure><img src="./img/phon-3.png" alt="#" /></figure>
+                </div>
+                <div class="phone-pagination swiper-pagination"></div>
+              </div>
+            </div>
+            <!-- Slides end -->
+            <div class="card-text">
+              <dl class="text-con">
+                <dt>유튜브 프리미엄</dt>
+                <dd>
+                  기획+제작+판매대행+송출까지 <br />통합적으로 제공하는 완성형
+                  파트너십 패키지
+                </dd>
+              </dl>
+              <dl class="text-con">
+                <dt>유튜브 스튜디오</dt>
+                <dd>
+                  라이브 장송제작 비용을 최소화하여 <br />협업으로 진행하는
+                  패키지
+                </dd>
+              </dl>
+              <dl class="text-con">
+                <dt>유튜브 브랜딩</dt>
+                <dd>
+                  자사브랜드의 이미지 제고를 위해 <br />영상 중심의 브랜디드
+                  콘텐츠를 강화하여 <br />자사의 유튜브 채널 육성과 자사몰<br />
+                  충성고객 확보를 위한 패키지
+                </dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- phone end -->
     </div>
 
     <footer id="footer">
