--- a/design.html
+++ b/design.html
@@ -35,7 +35,7 @@
                 <a href="./design-2.html"><i>인쇄</i></a>
               </li>
               <li>
-                <a href="#"><i>네이밍</i></a>
+                <a href="#"><i>SNS</i></a>
               </li>
             </ul>
           </li>
@@ -98,7 +98,7 @@
                   <a href="./design-2.html"><i>인쇄</i></a>
                 </li>
                 <li>
-                  <a href="#"><i>네이밍</i></a>
+                  <a href="#"><i>SNS</i></a>
                 </li>
               </ul>
             </li>
